# livo-assitant-tha

./: LICENSE  README.md  package-lock.json  package.json
apps/rag-pipeline/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt  server.py
apps/rag-pipeline/actions/: create_collection.py  embed.py  llm_answer.py
apps/rag-pipeline/api/routes/: query.py  router.py  upload.py
apps/rag-pipeline/config/: gemini.py  logger.py  qdrant.py  redis.py
apps/rag-pipeline/utils/: embedd.py  extract_vid.py  format_timestamp.py  status.py  transcript.py  translate.py
apps/web/: package.json  skills-lock.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/upload/: page.tsx
apps/web/components/: answer-renderer.tsx  formatted-answer.tsx  rag-sources.tsx  source-hover.tsx
apps/web/components/screens/: chat.tsx  upload.tsx
