[project]
name = "rag-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "certifi>=2026.2.25",
    "deep-translator>=1.11.4",
    "dotenv>=0.9.9",
    "fastapi>=0.128.8",
    "openai>=2.29.0",
    "protobuf>=6.33.6",
    "qdrant-client>=1.16.1",
    "sentencepiece>=0.2.1",
    "supabase>=2.28.3",
    "torch>=2.8.0",
    "transformers>=4.57.6",
    "youtube-transcript-api>=1.2.4",
]
